Added new categories, removed third layer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li next-group="contribute">Contribute
           <div class="extra" data-l10n-id="contribute-intro"></div> 
           </li>     
-        <li next-group="engagement">Engage
+        <li next-group="engagement">Get Involved
           <div class="extra" data-l10n-id="engagement-extra"></div>
         </li>
       </ul>
@@ -35,14 +35,16 @@
     <div class="group" id="writing">
       <span class="question" data-l10n-id="writing-intro"></span>
       <ul class="choices">
-        <li next-group="ff-cpp">Blog Posts
-          <div class="extra" data-l10n-id="writing-blogposts-extra"></div>
+        <li target="http://okfn.org/get-involved/translate">Translate
+          <div class="extra" data-l10n-id="translation-intro"></div>
         </li>
-        <li>Public Domain Review
-          <div class="extra" data-l10n-id="writing-pdr-extra"></div>
+        <li target="http://blog.okfn.org/submit/">Blog
+          <div class="extra" data-l10n-id="blog-intro"></div>
         </li>
+        
       </ul>
     </div>
+    
 
     <div class="group" id="coding">
       <span class="question" data-l10n-id="coding-intro"></span>
@@ -76,10 +78,10 @@
         <li>Open Data Census
           <div class="extra" data-l10n-id="census-intro"></div>
         </li>
-        <li>Recline.JS
-          <div class="extra" data-l10n-id="coding-recline-extra"></div>
+         <li target="http://schoolofdata.org/get-involved/">School of Data
+          <div class="extra" data-l10n-id="school-intro"></div>
         </li>
-        <li>OpenSpending
+        <li target="http://openspending.org/help/index.html">OpenSpending
           <div class="extra" data-l10n-id="coding-openspending-extra"></div>
         </li>
       </ul>
