--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         <li next-group="writing">Write
           <div class="extra" data-l10n-id="writing-extra"></div>
         </li>
-        <li next-group="coding">Code
-        <div class="extra" data-l10n-id="coding-extra"></div>
-        </li>
+        <li target="http://okfnlabs.org/join/">Code
+          <div class="extra" data-l10n-id="coding-intro"></div>
         <li next-group="contribute">Contribute
           <div class="extra" data-l10n-id="contribute-intro"></div> 
           </li>     
-        <li next-group="engagement">Get Involved
+        <li next-group="engagement">Connect
           <div class="extra" data-l10n-id="engagement-extra"></div>
         </li>
       </ul>
@@ -75,7 +74,7 @@
     <div class="group" id="contribute">
       <span class="question" data-l10n-id="contribute-intro"></span>
       <ul class="choices">
-        <li>Open Data Census
+        <li target="http://census.okfn.org/">Open Data Census
           <div class="extra" data-l10n-id="census-intro"></div>
         </li>
          <li target="http://schoolofdata.org/get-involved/">School of Data
@@ -101,7 +100,7 @@
       </div>
       <div id="back"><a href="javascript:" data-l10n-id="back"></a></div>
     </div>
-
+    
     <div id="footer" data-l10n-id="credits"></div>
   </div>
   <footer>
